turnkey-prestashop-12.0 (1) turnkey; urgency=low

  * PrestaShop: Upgraded to latest upstream archive.

  * Major component versions

    prestashop      1.4.8.2 (upstream archive)
    apache2         2.2.16-6+squeeze7
    mysql-server    5.1.63-0+squeeze1
    phpmyadmin      4:3.3.7-7

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Alon Swartz <alon@turnkeylinux.org>  Wed, 01 Aug 2012 08:00:00 +0200

turnkey-prestashop-11.3 (1) turnkey; urgency=low

  * Installed security updates.
  * Enabled etckeeper garbage collection by default.
  * Upgraded to latest inithooks version (adhoc re-initialization via turnkey-init)

 -- Alon Swartz <alon@turnkeylinux.org>  Mon, 05 Dec 2011 10:48:44 +0000

turnkey-prestashop-11.2 (1) turnkey; urgency=low

  * Installed security updates.
  * Added HubDNS package and firstboot configuration.

 -- Alon Swartz <alon@turnkeylinux.org>  Fri, 15 Jul 2011 07:47:08 +0000

turnkey-prestashop-11.1 (1) turnkey; urgency=low

  * Initial public release of TurnKey Linux PrestaShop.

  * PrestaShop related:

    - Set admin email and password on firstboot (convenience, security).
    - Administration link set to: https://$your_domain/administration
    - Optimized SEO URL's enabled by default.

  * MySQL related:

    - Set MySQL root password on firstboot (convenience, security).
    - Force MySQL to use Unicode/UTF8.
    - Includes PhpMyAdmin (listening on port 12322 - uses SSL).

  * SSL support out of the box.

  * Regenerates all secrets during installation / firstboot (security).

  * Includes php-xcache PHP opcode cacher / optimizer (performance).

  * Includes postfix MTA (bound to localhost) for sending of email (e.g.
    password recovery). Also includes webmin postfix module for convenience.

  * Major component versions:

    prestashop      1.3.3.0 (upstream tarball)
    mysql-server    5.1.41-3ubuntu12.8